--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:required="true" />
 
     <application
+        android:name="pl.tobynartowski.limfy.Limfy"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,13 +22,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+        android:screenOrientation="portrait"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.AppHistoryActivity"></activity>
-        <activity android:name=".activity.AppHeartActivity" />
-        <activity android:name=".activity.AppActualActivity" />
-        <activity android:name=".activity.ConnectActivity" />
-        <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.LoginActivity">
+        <service android:name=".api.RestUpdater" />
+        <activity android:name=".activity.AppHistoryActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.AppHeartActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.AppActualActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ConnectActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.RegisterActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.LoginActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
