--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,39 @@
         android:required="true" />
 
     <application
-        android:name="pl.tobynartowski.limfy.Limfy"
+        android:name=".Limfy"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:screenOrientation="portrait"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activity.AppViewActivity"></activity>
+
         <service android:name=".api.RestUpdater" />
-        <activity android:name=".activity.AppHistoryActivity" android:screenOrientation="portrait" />
-        <activity android:name=".activity.AppHeartActivity" android:screenOrientation="portrait" />
-        <activity android:name=".activity.AppActualActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.ConnectActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.RegisterActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.LoginActivity" android:screenOrientation="portrait">
+
+        <activity
+            android:name=".activity.AppHistoryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AppHeartActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AppActualActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ConnectActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
