Settings fragment implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="n">
 
-        <activity android:name=".ui.activity.AppViewActivity"
+        <activity
+            android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,16 +37,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.AppActualActivity"
+            android:name=".ui.activity.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.activity.AppViewActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ConnectActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.activity.RegisterActivity"
-            android:screenOrientation="portrait" />
-        <service android:name=".api.RestUpdater" />
 
+        <service android:name=".api.RestUpdater" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
