Partially body data adding

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="n">
-
+        <activity android:name=".ui.activity.RegisterDetailsActivity"></activity>
         <activity
             android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait">
@@ -36,19 +36,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activity.RegisterActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".ui.activity.AppViewActivity"
+        <activity
+            android:name=".ui.activity.AppViewActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.activity.ConnectActivity"
             android:screenOrientation="portrait" />
 
         <service android:name=".api.RestUpdater" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
