--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -26,7 +27,6 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="n">
-        <activity android:name=".ui.activity.RegisterDetailsActivity"></activity>
         <activity
             android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait">
@@ -44,6 +44,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ConnectActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.FallActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.RegisterDetailsActivity"
             android:screenOrientation="portrait" />
 
         <service android:name=".api.RestUpdater" />
